--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles.css">
 
 	<title>tic-tac-toe-p5</title>
 
-	<script src="libraries/p5.js"></script>
-	<script src="libraries/p5.dom.js"></script>
-	<script src="libraries/p5.sound.js"></script>
-	<script src="sketch.js"></script>
-
-	<style>
-		body {
-			margin:0;
-			padding:0;
-			overflow: hidden;
-		}
-		canvas {
-			margin:auto;
-		}
-	</style>
 </head>
 <body>
+	<div class="board">
+		<div class="cell empty" data-row="0" data-col="0"></div>
+		<div class="cell empty" data-row="0" data-col="1"></div>
+		<div class="cell empty" data-row="0" data-col="2"></div>
+		<div class="cell empty" data-row="1" data-col="0"></div>
+		<div class="cell empty" data-row="1" data-col="1"></div>
+		<div class="cell empty" data-row="1" data-col="2"></div>
+		<div class="cell empty" data-row="2" data-col="0"></div>
+		<div class="cell empty" data-row="2" data-col="1"></div>
+		<div class="cell empty" data-row="2" data-col="2"></div>
+	</div>
+
+
+	<script src="./libraries/p5.js"></script>
+	<script src="./libraries/p5.dom.js"></script>
+	<script src="./libraries/p5.sound.js"></script>
+	<script src="./board.js"></script>
+	<script src="./sketch.js"></script>
 </body>
 </html>
