working version but needs refactoring

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 
 </head>
 <body>
+	<header>
+		<h1>Tic Tac Toe</h1>
+	</header>
+
+	<div class="bar">
+		<div class="status">X's turn</div>
+		<div class="restart">Restart</div>
+	</div>
+
+	
+	
+
 	<div class="board">
 		<div class="cell empty" data-row="0" data-col="0"></div>
 		<div class="cell empty" data-row="0" data-col="1"></div>
@@ -22,10 +34,10 @@
 		<div class="cell empty" data-row="2" data-col="2"></div>
 	</div>
 
+	
+
 
 	<script src="./libraries/p5.js"></script>
-	<script src="./libraries/p5.dom.js"></script>
-	<script src="./libraries/p5.sound.js"></script>
 	<script src="./board.js"></script>
 	<script src="./sketch.js"></script>
 </body>
