changed the colours to look nicer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</header>
 
 	<div class="bar">
-		<div class="status">X's turn</div>
+		<div class="status X-turn">X's turn</div>
 		<div class="restart">Restart</div>
 	</div>
 
@@ -37,7 +37,7 @@
 	
 
 
-	<script src="./libraries/p5.js"></script>
+
 	<script src="./board.js"></script>
 	<script src="./sketch.js"></script>
 </body>
