refactored the code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles.css">
 
-	<title>tic-tac-toe-p5</title>
+	<title>Tic Tac Toe Game</title>
 
 </head>
 <body>
@@ -39,6 +39,6 @@
 
 
 	<script src="./board.js"></script>
-	<script src="./sketch.js"></script>
+	<script src="./app.js"></script>
 </body>
 </html>
